Fetching and displaying presentations from API

--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListView.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListView.xaml
@@ -4,8 +4,22 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Napps.Windows.Assessment.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:Napps.Windows.Assessment.Views"
              d:DesignHeight="450"
              d:DesignWidth="800"
              mc:Ignorable="d">
-	<Grid />
+    <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
+        <ItemsControl ItemsSource="{Binding Presentations}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <views:PresentationListItemView Margin="10"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
+    </ScrollViewer>
 </UserControl>
