--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListItemView.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListItemView.xaml
@@ -1,30 +1,28 @@
 ﻿<UserControl x:Class="Napps.Windows.Assessment.Views.PresentationListItemView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Napps.Windows.Assessment.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Border CornerRadius="6" BorderBrush="Gray" BorderThickness="1" SnapsToDevicePixels="True" MaxWidth="250" MaxHeight="150">
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
+             mc:Ignorable="d"
+             d:DesignHeight="150" d:DesignWidth="250">
+
+    <ContentControl Style="{StaticResource PresentationItemHoverableStyle}" Margin="20"
+                    cal:Message.Attach="[Event MouseLeftButtonUp] = [Action ShowPresentationDetailsAsync()]">
         <Grid>
-            <Image Source="{Binding ThumbnailUrl}" 
-                   Stretch="UniformToFill" 
-                   ClipToBounds="True"/>
-            <Border Name="Overlay"
-                    VerticalAlignment="Stretch"
-                    HorizontalAlignment="Stretch">
-                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-                    <TextBlock Text="{Binding Title}" 
-                               Foreground="Black" 
-                               FontSize="14" 
-                               TextAlignment="Center"/>
-                    <TextBlock Text="{Binding Author.Name.FullName}" 
-                               Foreground="Black" 
-                               FontSize="14" 
-                               TextAlignment="Center"/>
-                </StackPanel>
-            </Border>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <!-- Thumbnail -->
+            <Image Source="{Binding ThumbnailUrl}" Stretch="UniformToFill" Grid.Row="0"/>
+
+            <!-- Title and Author -->
+            <StackPanel Grid.Row="1" Margin="5">
+                <TextBlock Text="{Binding Title}" Style="{StaticResource ListItemTitle}" />
+                <TextBlock Text="{Binding Author.Name.FullName}" Style="{StaticResource ListItemAuthor}" />
+            </StackPanel>
         </Grid>
-    </Border>
+    </ContentControl>
 </UserControl>
