--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Styles/TextStyles.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Styles/TextStyles.xaml
@@ -31,6 +31,11 @@
         <Setter Property="FontStyle" Value="Italic"/>
     </Style>
 
+    <Style x:Key="StatusLabel" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="10"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
     <Style x:Key="Header1" TargetType="TextBlock">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Margin" Value="32,2,0,0"/>
