--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/App.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/App.xaml
@@ -14,6 +14,8 @@
             </ResourceDictionary.MergedDictionaries>
             <!-- Converters -->
             <converters:PrivacyEnumToStringConverter x:Key="PrivacyEnumToStringConverter" />
+            <converters:ProgressStatusEnumToBrushConverter x:Key="ProgressStatusEnumToBrushConverter" />
+            <converters:ImageSourceToBitmapConverter x:Key="ImageSourceToBitmapConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
