--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListView.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/Views/PresentationListView.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:Napps.Windows.Assessment.Views"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:views="clr-namespace:Napps.Windows.Assessment.Views"
+             xmlns:controls="clr-namespace:Napps.Windows.Assessment.Controls"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:res="clr-namespace:Napps.Windows.Assessment.Properties"
              d:DesignHeight="450"
@@ -40,7 +40,7 @@
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <views:PresentationListItemView Margin="10" DataContext="{Binding}" />
+                    <controls:PresentationListItemControl Margin="10" />
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
