Added busy indication.

--- a/Napps.Windows.Assessment/Napps.Windows.Assessment/App.xaml
+++ b/Napps.Windows.Assessment/Napps.Windows.Assessment/App.xaml
@@ -16,6 +16,7 @@
             <converters:PrivacyEnumToStringConverter x:Key="PrivacyEnumToStringConverter" />
             <converters:ProgressStatusEnumToBrushConverter x:Key="ProgressStatusEnumToBrushConverter" />
             <converters:ImageSourceToBitmapConverter x:Key="ImageSourceToBitmapConverter" />
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
